# mbtop

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  CMakeLists.txt  Makefile  README.md  manpage.md  mbtop.desktop
Img/: CleanShot 2026-01-16 at 22.11.46@2x.pxd  logo.pxd
claudedocs/: config_dialog_analysis.md
docs/: CONFIG_MODERNIZATION_PLAN.md  Home.md  MCP-Process-Tagging-Runbook.md  Preset-Builder.md  Settings-Menu.md
mcp-server/: README.md  pyproject.toml
mcp-server/src/mbtop_mcp/: __init__.py
packaging/deb/: build-deb.sh
packaging/macos/: build-pkg.sh
packaging/rpm/: build-rpm.sh  mbtop.spec
release/: mbtop-1.6.0-macos-arm64.pkg
src/: btop.cpp  btop_cli.cpp  btop_config.cpp  btop_draw.cpp  btop_input.cpp  btop_menu.cpp  btop_menu.hpp  btop_shared.hpp  btop_theme.cpp  btop_theme.hpp  btop_tools.cpp  btop_tools.hpp  main.cpp  mbtop.cpp  mbtop_cli.cpp  mbtop_config.cpp  mbtop_config.hpp  mbtop_draw.cpp  mbtop_draw.hpp  mbtop_input.cpp  mbtop_log.cpp  mbtop_menu.cpp  mbtop_menu.hpp  mbtop_shared.cpp  mbtop_shared.hpp  mbtop_socket.cpp  mbtop_socket.hpp  mbtop_theme.cpp  mbtop_theme.hpp  mbtop_tools.cpp  mbtop_tools.hpp
src/freebsd/: mbtop_collect.cpp
src/linux/: mbtop_collect.cpp
src/netbsd/: mbtop_collect.cpp
src/openbsd/: mbtop_collect.cpp  sysctlbyname.cpp
src/osx/: apple_silicon_gpu.cpp  (+2 more)
tests/: CMakeLists.txt  tools.cpp
tests/ane_test/: .gitignore  Makefile  README.md  ane_bnns_test  ane_bnns_test.cpp  ane_coreml_load  ane_coreml_load.mm  ane_coreml_test  ane_coreml_test.mm
themes/: Nord+.theme  btopplusplus.theme  default.theme
(+2 files in other folders)
